# globe

./: Cargo.toml  README.md
mongodb-navigator/: .gitignore  README.md  index.html  package-lock.json  package.json
mongodb-navigator/src/: App.jsx  index.css
mongodb-navigator/src/components/layout/: Layout.jsx  Sidebar.jsx  Topbar.jsx
mongodb-navigator/src/components/ui/: Button.jsx  Card.jsx
mongodb-navigator/src/pages/: AIQuery.jsx  Aggregations.jsx  Collections.jsx  Dashboard.jsx  Databases.jsx  QueryBuilder.jsx  SchemaUpload.jsx  Settings.jsx  Stats.jsx
mongodb-navigator/src/utils/: theme.js
src/: .env  ai.rs  collections.rs  dbs.rs  main.rs  monitoring.rs  settings.rs  state.rs  stats.rs
src/ops/: mod.rs
