[package]
name = "globe"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7"
dotenv = "0.15.0"
mongodb = "3.3.0"
serde = "1.0.228"
serde_json = "1.0.145"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
regex = "1.9"
gemini-client-api = "5.5.8"
json5 = "0.4"
